<resources>
    <string name="app_name">Wesolient</string>
    <string name="app_head_name">@string/app_name</string>

    <!--    CHAT FRAGMENT   -->
    <string name="chat_miss_scope">Can\'t find this scope</string>
    <string name="chat_message_hint">Type message here…</string>
    <string name="chat_settings">Settings</string>
    <string name="chat_connection_opening">Opening</string>
    <string name="chat_connection_opened">Connected</string>
    <string name="chat_connection_closing">Closing</string>
    <string name="chat_connection_closed">Connection closed\n%1$d: %2$s</string>
    <string name="chat_connection_failed">Connection to %1$s failed</string>
    <string name="chat_illegal_url">Illegal websocket url</string>
    <string name="chat_connect">Connect</string>
    <string name="chat_disconnect">Disconnect</string>
    <string name="chat_send_message">Send</string>
    <string name="chat_undefined_error">Something went wrong</string>


    <!--    CLOSE REASON DIALOG   -->
    <string name="close_reason_used_reserved_code">Codes 1004..1006, 1012..2999 are reserved and may not be used</string>
    <string name="close_reason_code_hint">Code</string>
    <string name="close_reason_message_hint">Message</string>
    <string name="close_reason_send">Send</string>


    <!--    SELECT SCOPE LIST   -->
    <string name="select_scope_logo">Logo</string>
    <string name="select_scope_settings">Settings</string>
    <string name="select_scope_create">Create new</string>
    <string name="select_scope_menu_item_edit">Edit</string>
    <string name="select_scope_menu_item_delete">Delete</string>
    <string name="select_scope_list_placeholder">Scope list is empty.\nMaybe you should to add one?</string>

    <!--    CREATE SCOPE DIALOG   -->
    <string name="create_scope_title_hint">E.g. Awesome project</string>
    <string name="create_scope_url_hint">wss://awesome.project.io</string>
    <string name="create_scope_create">Create</string>
    <string name="create_scope_failure">Something went wrong. try later</string>

    <!--    EDIT SCOPE DIALOG   -->
    <string name="edit_scope_miss">Can\'t find this template</string>
    <string name="edit_scope_title_hint">E.g. Awesome project</string>
    <string name="edit_scope_url_hint">wss://awesome.project.io</string>
    <string name="edit_scope_apply">Apply</string>
    <string name="edit_scope_failure">Something went wrong. try later</string>

    <!--    DELETE SCOPE DIALOG   -->
    <string name="delete">Delete</string>

    <!--    TEMPLATE SELECT DIALOG   -->
    <string name="select_template_header">Templates</string>
    <string name="select_template_create">Create new</string>
    <string name="select_template_menu_item_edit">Edit</string>
    <string name="select_template_menu_item_delete">Delete</string>
    <string name="select_template_delete_confirmation">Do you want to delete this template?</string>
    <string name="select_template_delete_positive">Yes</string>
    <string name="select_template_delete_success">Deleted</string>
    <string name="select_template_delete_failure">Something went wrong</string>

    <!--    CREATE TEMPLATE DIALOG   -->
    <string name="create_template_title_hint">E.g. say \'Hello Scarlet\'</string>
    <string name="create_template_message_hint">Hello @{userName}</string>
    <string name="create_template_create">Create</string>
    <string name="create_template_failure">Something went wrong. try later</string>

    <!--    EDIT TEMPLATE DIALOG   -->
    <string name="edit_template_miss">Can\'t find this template</string>
    <string name="edit_template_title_hint">@string/create_template_title_hint</string>
    <string name="edit_template_message_hint">@string/create_template_message_hint</string>
    <string name="edit_template_apply">Apply</string>
    <string name="edit_template_failure">Something went wrong. try later</string>


    <!--    VARIABLE SELECT DIALOG   -->
    <string name="select_variable_header">Variables</string>
    <string name="select_variable_create">Create new</string>
    <string name="select_variable_menu_item_edit">Edit</string>
    <string name="select_variable_menu_item_delete">Delete</string>
    <string name="select_variable_delete_confirmation">Do you want to delete this variable?</string>
    <string name="select_variable_delete_positive">Yes</string>
    <string name="select_variable_delete_success">Deleted</string>
    <string name="select_variable_delete_failure">Something went wrong</string>

    <!--    CREATE VARIABLE DIALOG   -->
    <string name="create_variable_title_hint">E.g. userName</string>
    <string name="create_variable_value_hint">Scarlet</string>
    <string name="create_variable_create">Create</string>
    <string name="create_variable_failure">Something went wrong. try later</string>

    <!--    EDIT VARIABLE DIALOG   -->
    <string name="edit_variable_miss">Can\'t find this variable</string>
    <string name="edit_variable_title_hint">@string/create_variable_title_hint</string>
    <string name="edit_variable_value_hint">@string/create_variable_value_hint</string>
    <string name="edit_variable_apply">Apply</string>
    <string name="edit_variable_failure">Something went wrong. try later</string>


    <!--    SETTINGS FRAGMENT   -->
    <string name="settings_header">Settings</string>
    <string name="settings_loading_placeholder">Wait a second, we are loading your settings</string>
    <string name="settings_auto_connect">Auto-connect on scope open</string>
    <string name="settings_logout">LogOut</string>
    <string name="settings_retry_on_connection_failure">Retry on connection failure?</string>
</resources>