<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="8dp">

    <EditText
        android:id="@+id/etTemplateTitle"
        style="@style/EditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/create_template_title_hint"
        android:importantForAutofill="no"
        android:inputType="text"
        android:maxLines="1"
        android:textColor="@color/colorPrimary"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/etTemplateMessage"
        style="@style/EditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/create_template_message_hint"
        android:importantForAutofill="no"
        android:inputType="text|textUri"
        android:maxLines="1"
        android:textColor="@color/colorText"
        android:textSize="16sp" />

    <Button
        android:id="@+id/bCreateTemplate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:background="@drawable/accent_button_background"
        android:enabled="false"
        android:foreground="?android:selectableItemBackground"
        android:text="@string/create_scope_create"
        android:textColor="@color/colorBackground" />

</LinearLayout>