<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@color/colorBackground"
        android:elevation="4dp"
        android:gravity="center_vertical">

        <ImageButton
            android:id="@+id/bBack"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_back"
            android:tint="@color/colorSecondary" />

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/settings_header"
            android:textColor="@color/colorText"
            android:textSize="16sp"
            android:textAlignment="center"/>

        <ImageButton
            android:id="@+id/bSaveSettings"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_check"
            android:tint="@color/colorPrimary" />
    </LinearLayout>

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/sAutoConnect"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="24dp"
        android:paddingVertical="16dp"
        android:text="@string/settings_auto_connect"
        android:textColor="@color/colorText" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingHorizontal="24dp"
        android:paddingVertical="16dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/settings_reconnect_count"
            android:textColor="@color/colorText" />

        <EditText
            android:id="@+id/etReconnectCount"
            android:layout_width="35dp"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:inputType="numberDecimal"
            android:textAlignment="center"
            android:textColor="@color/colorText"
            android:textColorHint="@color/colorTextSecondary" />
    </LinearLayout>

    <Button
        android:id="@+id/bLogOut"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:foreground="?android:attr/selectableItemBackground"
        android:text="@string/settings_logout"
        android:textColor="@color/colorTextSecondary" />

</LinearLayout>